Ensure featured media with text text is visible and not white

--- a/web/themes/custom/love_essex/css/components/campaign-pages.css
+++ b/web/themes/custom/love_essex/css/components/campaign-pages.css
@@ -1,5 +1,6 @@
 /* Love Essex Green */
 body {
+  --color-campaign-text-default: #000;
   /* Banner/Heading */
   --color-leg-header-background: #78BE20;
   --color-leg-header-heading-text: #000;
@@ -156,6 +157,13 @@ body {
 .love_essex_green .lgd-page-section--bg-colour-1 button {
   color: var(--color-leg-colour-block-1-heading-text);
 }
+.love_essex_green .lgd-page-section--bg-colour-1 .media-with-text__body,
+.love_essex_green .lgd-page-section--bg-colour-1 .media-with-text__body .media-with-text__link {
+  color: var(--color-leg-colour-block-1-text);
+}
+.love_essex_green .lgd-page-section--bg-colour-1 .media-with-text--featured .media-with-text__inner {
+  color: var(--color-campaign-text-default);
+}
 .love_essex_green .lgd-page-section--bg-colour-1 .featured-teaser h3 {
   color: inherit;
 }
@@ -174,6 +182,13 @@ body {
 .love_essex_green .lgd-page-section--bg-colour-2 h3,
 .love_essex_green .lgd-page-section--bg-colour-2 button {
   color: var(--color-leg-colour-block-2-heading-text);
+}
+.love_essex_green .lgd-page-section--bg-colour-2 .media-with-text__body,
+.love_essex_green .lgd-page-section--bg-colour-2 .media-with-text__body .media-with-text__link {
+  color: var(--color-leg-colour-block-2-text);
+}
+.love_essex_green .lgd-page-section--bg-colour-2 .media-with-text--featured .media-with-text__inner {
+  color: var(--color-campaign-text-default);
 }
 .love_essex_green .lgd-page-section--bg-colour-2 .featured-teaser h3 {
   color: inherit;
@@ -246,8 +261,12 @@ body {
 .love_essex_orange .lgd-page-section--bg-colour-1 h2,
 .love_essex_orange .lgd-page-section--bg-colour-1 h3,
 .love_essex_orange .lgd-page-section--bg-colour-1 button,
-.love_essex_orange .lgd-page-section--bg-colour-1 .media-with-text__body {
+.love_essex_orange .lgd-page-section--bg-colour-1 .media-with-text__body,
+.love_essex_orange .lgd-page-section--bg-colour-1 .media-with-text__body .media-with-text__link {
   color: var(--color-leo-colour-block-1-heading-text);
+}
+.love_essex_orange .lgd-page-section--bg-colour-1 .media-with-text--featured .media-with-text__inner {
+  color: var(--color-campaign-text-default);
 }
 .love_essex_orange .lgd-page-section--bg-colour-1 .featured-teaser h3 {
   color: inherit;
@@ -271,8 +290,12 @@ body {
 .love_essex_orange .lgd-page-section--bg-colour-2 h2,
 .love_essex_orange .lgd-page-section--bg-colour-2 h3,
 .love_essex_orange .lgd-page-section--bg-colour-2 button,
-.love_essex_orange .lgd-page-section--bg-colour-2 .media-with-text__body {
+.love_essex_orange .lgd-page-section--bg-colour-2 .media-with-text__body,
+.love_essex_orange .lgd-page-section--bg-colour-2 .media-with-text__body .media-with-text__link {
   color: var(--color-leo-colour-block-2-heading-text);
+}
+.love_essex_orange .lgd-page-section--bg-colour-2 .media-with-text--featured .media-with-text__inner {
+  color: var(--color-campaign-text-default);
 }
 .love_essex_orange .lgd-page-section--bg-colour-2 .featured-teaser h3 {
   color: inherit;
@@ -345,9 +368,23 @@ body {
 
 .love_essex_red .lgd-page-section--bg-colour-1 h2,
 .love_essex_red .lgd-page-section--bg-colour-1 h3,
-.love_essex_red .lgd-page-section--bg-colour-1 button,
-.love_essex_red .lgd-page-section--bg-colour-1 .media-with-text__body {
+.love_essex_red .lgd-page-section--bg-colour-1 button {
   color: var(--color-ler-colour-block-1-heading-text);
+}
+.love_essex_red .lgd-page-section--bg-colour-1,
+.love_essex_red .lgd-page-section--bg-colour-2,
+.love_essex_red .lgd-page-section--bg-colour-3 {
+  .media-with-text--featured .media-with-text__inner {
+    color: var(--color-campaign-text-default);
+
+    .media-with-text__body {
+      color: var(--color-campaign-text-default);
+
+      .media-with-text__link {
+        color: var(--color-campaign-text-default);
+      }
+    }
+  }
 }
 .love_essex_red .lgd-page-section--bg-colour-1 .featured-teaser h3 {
   color: inherit;
@@ -370,9 +407,12 @@ body {
 
 .love_essex_red .lgd-page-section--bg-colour-2 h2,
 .love_essex_red .lgd-page-section--bg-colour-2 h3,
-.love_essex_red .lgd-page-section--bg-colour-2 button,
-.love_essex_red .lgd-page-section--bg-colour-2 .media-with-text__body {
+.love_essex_red .lgd-page-section--bg-colour-2 button {
   color: var(--color-ler-colour-block-2-heading-text);
+}
+
+.love_essex_green .lgd-page-section--bg-colour-2 .media-with-text--featured .media-with-text__inner {
+  color: var(--color-campaign-text-default);
 }
 .love_essex_red .lgd-page-section--bg-colour-2 .text-component.text-component--has-bg-colour h2,
 .love_essex_red .lgd-page-section--bg-colour-2 .text-component.text-component--has-bg-colour h3,
@@ -381,8 +421,12 @@ body {
   color: inherit;
 }
 
-.love_essex_red .lgd-page-section--bg-colour-3 .media-with-text__body {
+.love_essex_red .lgd-page-section--bg-colour-3 .media-with-text__body,
+.love_essex_red .lgd-page-section--bg-colour-3 .media-with-text__body .media-with-text__link {
   color: var(--color-ler-page-text);
+}
+.love_essex_green .lgd-page-section--bg-colour-3 .media-with-text--featured .media-with-text__inner {
+  color: var(--color-campaign-text-default);
 }
 
 .love_essex_red .lgd-page-section--bg-colour-2 a:not(.call-to-action__link a) {
@@ -438,7 +482,21 @@ body {
   background-color: var(--color-leb-page-button-color);
 }
 
+.love_essex_blue .lgd-page-section--bg-colour-1,
+.love_essex_blue .lgd-page-section--bg-colour-2,
+.love_essex_blue .lgd-page-section--bg-colour-3 {
+  .media-with-text--featured .media-with-text__inner {
+    color: var(--color-campaign-text-default);
 
+    .media-with-text__body {
+      color: var(--color-campaign-text-default);
+
+      .media-with-text__link {
+        color: var(--color-campaign-text-default);
+      }
+    }
+  }
+}
 /* Colour block 1 */
 .love_essex_blue .lgd-page-section.lgd-page-section--bg-colour-1 {
   background-color: var(--color-leb-colour-block-1-background);
@@ -447,9 +505,11 @@ body {
 
 .love_essex_blue .lgd-page-section--bg-colour-1 h2,
 .love_essex_blue .lgd-page-section--bg-colour-1 h3,
-.love_essex_blue .lgd-page-section--bg-colour-1 button,
-.love_essex_blue .lgd-page-section--bg-colour-1 .media-with-text__body {
+.love_essex_blue .lgd-page-section--bg-colour-1 button {
   color: var(--color-leb-colour-block-1-heading-text);
+}
+.love_essex_blue .lgd-page-section--bg-colour-1 .media-with-text--featured .media-with-text__inner {
+  color: var(--color-campaign-text-default);
 }
 .love_essex_blue .lgd-page-section--bg-colour-1 .featured-teaser h3 {
   color: inherit;
@@ -472,9 +532,11 @@ body {
 
 .love_essex_blue .lgd-page-section--bg-colour-2 h2,
 .love_essex_blue .lgd-page-section--bg-colour-2 h3,
-.love_essex_blue .lgd-page-section--bg-colour-2 button,
-.love_essex_blue .lgd-page-section--bg-colour-2 .media-with-text__body {
+.love_essex_blue .lgd-page-section--bg-colour-2 button {
   color: var(--color-leb-colour-block-2-heading-text);
+}
+.love_essex_blue .lgd-page-section--bg-colour-2 .media-with-text--featured .media-with-text__inner {
+  color: var(--color-campaign-text-default);
 }
 .love_essex_blue .lgd-page-section--bg-colour-2 .featured-teaser h3 {
   color: inherit;
